syntax = "proto3";

package grpc_package;

service GrpcStressSimulatorService {
  rpc SimulateBurst (BurstRequest) returns (BurstResponse);
  rpc SimulateMemoryLeak (MemoryRequest) returns (MemoryResponse);
}

message BurstRequest {
  uint32 duration_ms = 1;
  uint64 upper_bound = 2;
}

message BurstResponse {
  string message = 1;
}

message MemoryRequest {
  uint32 duration_ms = 1;
  uint64 memory_bytes = 2;
}

message MemoryResponse {
  string message = 1;
}
